test/compiler/fail/_list_heterogeneous.ods
do ["one", "of", "these", "things", true, "is", "not", "like", "the", "others"]

